# duckietown-mplan

./: .gitmodules  README.md  requirements.txt
.circleci/: config.yml
catkin_ws/src/00-infrastructure/duckietown_msgs/: CMakeLists.txt
catkin_ws/src/30-localization-and-planning/obst_avoid/: README.md  package.xml
catkin_ws/src/30-localization-and-planning/obst_avoid/include/obst_avoid/containers/: cost_grid.py  obstacle.py  trajectory.py
catkin_ws/src/30-localization-and-planning/obst_avoid/include/obst_avoid/manipulators/: cost_grid_populator.py  cost_grid_solver.py  manipulator_base.py  manipulator_template.py  trajectory_creator.py  trajectory_sampler.py
catkin_ws/src/30-localization-and-planning/obst_avoid/src/: manipulator_node_template.py  trajectory_creator_node.py  trajectory_sampler_node.py
catkin_ws/src/50-misc-additional-functionality/obst-avoid/: README.md  getCost.py  requirements.txt
catkin_ws/src/50-misc-additional-functionality/obst_avoid/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/50-misc-additional-functionality/obst_avoid/doc/: conf.py  index.rst  obst_avoid.rst  obst_avoid.workers.rst
catkin_ws/src/50-misc-additional-functionality/obst_avoid/doc/_build/doctrees/: setup.doctree
catkin_ws/src/50-misc-additional-functionality/obst_avoid/doc/_build/html/: .buildinfo  genindex.html  setup.html
catkin_ws/src/50-misc-additional-functionality/obst_avoid/doc/_build/html/_sources/: obst_avoid.manipulators.txt
catkin_ws/src/50-misc-additional-functionality/obst_avoid/documentation/: Makefile
catkin_ws/src/50-misc-additional-functionality/obst_avoid/documentation/source/: conf.py  index.py
catkin_ws/src/50-misc-additional-functionality/obst_avoid/include/obst_avoid/: __init__.py
catkin_ws/src/50-misc-additional-functionality/obst_avoid/include/obst_avoid/containers/: cost_grid.py  obstacle.py  trajectory.py
catkin_ws/src/50-misc-additional-functionality/obst_avoid/include/obst_avoid/manipulators/: cost_grid_populator.py  cost_grid_solver.py
catkin_ws/src/50-misc-additional-functionality/obst_avoid/include/obst_avoid/workers/: __init__.py  trajectory_creator.py  trajectory_sampler.py  worker_template.py
catkin_ws/src/50-misc-additional-functionality/obst_avoid/launch/: obst_avoid.launch  obst_avoid_easy.launch  template.launch
catkin_ws/src/50-misc-additional-functionality/obst_avoid/src/: fleet_planner_wrapper_node.py  trajectory_creator_node.py  trajectory_sampler_node.py
catkin_ws/src/50-misc-additional-functionality/obst_avoid18/: README.md
catkin_ws/src/50-misc-additional-functionality/obst_avoid18/obst_avoid_viz/: CMakeLists.txt
catkin_ws/src/50-misc-additional-functionality/obst_avoid18/obst_avoid_viz/config/: default.rviz
catkin_ws/src/50-misc-additional-functionality/obst_avoid18/obst_avoid_viz/include/obst_avoid_viz/: duck_viz.hpp
catkin_ws/src/50-misc-additional-functionality/obst_avoid18/obst_avoid_viz/src/: path_viz_node.py
catkin_ws/src/50-misc-additional-functionality/obst_avoid18/obst_avoid_viz/src/libraries/obst_avoid_viz/: duck_viz.cpp
catkin_ws/src/50-misc-additional-functionality/obst_avoid_saviours/: CMakeLists.txt  package.xml  setup.py
doc/: Makefile  obst_avoid.containers.rst
doc/_build/doctrees/: obst_avoid.doctree
doc/_build/html/: index.html  objects.inv  obst_avoid.html  searchindex.js
duckietown-fplan/src/flock_planner/: CMakeLists.txt  package.xml
duckietown-fplan/src/flock_simulator/: package.xml
duckietown-fplan/src/flock_simulator/config/: robotarium1.rviz
duckietown-fplan/src/flock_simulator/launch/: visualization.launch
duckietown-fplan/src/flock_simulator/msg/: DuckieState.msg  FlockState.msg
duckietown-fplan/src/flock_simulator/src/: state_manager.py  traffic_rules.py  utils.py
obst-avoid/duckietown-fplan/: .gitignore  .gitmodules  README.md
obst-avoid/duckietown-fplan/src/flock_planner/: setup.py
obst-avoid/duckietown-fplan/src/flock_simulator/: CMakeLists.txt  setup.py
obst-avoid/duckietown-fplan/src/flock_simulator/config/: 4way.rviz
obst-avoid/duckietown-fplan/src/flock_simulator/launch/: flock_simulator.launch
obst-avoid/duckietown-fplan/src/flock_simulator/msg/: DuckieCommand.msg  FlockCommand.msg  Request.msg
obst-avoid/duckietown-fplan/src/flock_simulator/src/: duckie_dynamics.py  flock_simulator_node.py  street_obstruction.py
obst-avoid/obst_avoid/config/: obst_avoid_params.yaml
obst-avoid/obst_avoid/src/: fleet_planner_wrapper_node.py  worker_template_node.py
obst-avoid/obst_avoid_msgs/: package.xml
obst-avoid/obst_avoid_viz/src/: path_viz_node.py
obst_avoid/: CMakeLists.txt  package.xml
obst_avoid/config/: obst_avoid_objects.yaml  obst_avoid_params.yaml
obst_avoid/config/demos/1/: 1.rviz
obst_avoid/config/demos/2/: 2.rviz  obst_avoid_objects.yaml
obst_avoid/config/demos/3/: 3.rviz  obst_avoid_objects.yaml
obst_avoid/config/demos/4/: 4.rviz  obst_avoid_objects.yaml
obst_avoid/config/demos/5/: 5.rviz  obst_avoid_objects.yaml
obst_avoid/doc/_build/html/: search.html
obst_avoid/include/obst_avoid/: __init__.py
obst_avoid/include/obst_avoid/containers/: cost_grid.py  obstacle.py  trajectory.py
obst_avoid/include/obst_avoid/manipulators/: cost_grid_populator.py  cost_grid_solver.py  map_manipulator.py
obst_avoid/include/obst_avoid/workers/: __init__.py  example_publisher.py  trajectory_creator.py  trajectory_sampler.py  worker_base.py  worker_template.py
obst_avoid/launch/: obst_avoid_withviz.launch  obst_avoid_withviz_1_static_obstacle.launch  obst_avoid_withviz_demo.launch
obst_avoid/src/: example_publisher_node.py  fleet_planner_wrapper_node.py  trajectory_creator_node.py  trajectory_sampler_node.py
obst_avoid_msgs/: CMakeLists.txt  package.xml
obst_avoid_viz/: CMakeLists.txt  package.xml  setup.bash  setup.py
obst_avoid_viz/config/: default.rviz
obst_avoid_viz/include/obst_avoid_viz/: __init__.py  path_viz.py
obst_avoid_viz/src/: duck_viz_node.cpp
obst_avoid_viz/src/libraries/obst_avoid_viz/: duck_viz.cpp
setup/: setup_from_blank_folder.bash
(+58 files in other folders)
