<?xml version="1.0"?>
<package>
    <name>obst_avoid</name>
    <version>1.0.0</version>
    <description>A package for planning trajectories which avoid obstacles</description>

    <author email="lgulich@ethz.ch">Lionel Gulich</author>
    <author email="vklemm@ethz.ch">Victor Klemm</author>
    <author email="dominikm@ethz.ch">Dominik Mannhart</author>
    <author email="morraa@ethz.ch">Alessandro Morra</author>

    <maintainer email="lgulich@ethz.ch">Lionel Gulich</maintainer>
    <license>GPLv3</license>



    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rospy</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>obst_avoid_msgs</build_depend>
    <build_depend>flock_simulator</build_depend>
    <build_depend>obst_avoid_viz</build_depend>


    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>obst_avoid_msgs</run_depend>
    <run_depend>flock_simulator</run_depend>
    <run_depend>flock_planner</run_depend>
    <run_depend>obst_avoid_viz</run_depend>


    <test_depend>gtest</test_depend>


</package>
