<?xml version="1.0"?>
<package>
    <name>obst_avoid</name>
    <version>1.0.0</version>
    <description>A package for planning trajectories which avoid obstacles</description>
    
    <author email="lgulich@ethz.ch">Lionel Gulich</author>
    <author email="vklemm@ethz.ch">Victor Klemm</author>
    <author email="dominikm@ethz.ch">Dominik Mannhart</author>
    <author email="morraa@ethz.ch">Alessandro Morra</author>
    
    <maintainer email="lgulich@ethz.ch">Lionel Gulich</maintainer>
    <license>GPLv3</license>
    
    
    
    <buildtool_depend>catkin</buildtool_depend>
    
    <test_depend>gtest</test_depend>
    
    
</package>

